Quorum3/Library/Tests/TypeChecker/Pass/ImpAssignIntegerIntegerField.quorum
class Main
    integer v = 5
    action Main
        Test(v)
    end

    action Test(integer var)
        if var = 5
            output "passed"
        end
    end
end
