Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignBoolObjIntegerWrapped.quorum
class main
    action Main
        integer i = 5
        Boolean b = i
    end
end